CORS vulnerability was added